--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Settings File #
 settings.py
 deneme/
+static/.webassets-cache/
+static/gen/packed.css
 
 # Compiled source #
 ###################
